testsuite/tests/partial-sigs/should_fail/ExtraConstraintsWildcardInPatternSplice.hs
{-# LANGUAGE TemplateHaskell #-}
{-# LANGUAGE ScopedTypeVariables #-}
module ExtraConstraintsWildcardInPatternSplice where

foo $( [p| (_ :: _) |] ) = ()
